RMSLE formula correction

--- a/project_bikesharing.ipynb
+++ b/project_bikesharing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -112,12 +112,12 @@
     "    Inputs: actual counts, predicted counts\n",
     "    Outputs: Root Mean Squared Logarithmic Error\n",
     "    \"\"\"\n",
-    "    return np.mean(np.square(np.log(predicted+1) - np.log(actual+1)))"
+    "    return np.sqrt(np.mean(np.square(np.log(predicted+1) - np.log(actual+1))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -126,8 +126,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSLE(baseline): 2.44273331654\n",
-      "RMSLE: 1.94264367845\n",
+      "RMSLE(baseline): 1.5629246036\n",
+      "RMSLE: 1.39378752988\n",
       "R-square on dev: 0.280842519381\n"
      ]
     }
