Split up datetime into components

--- a/project_bikesharing.ipynb
+++ b/project_bikesharing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -44,34 +44,45 @@
      "output_type": "stream",
      "text": [
       "Feature names: \n",
-      "['season' 'holiday' 'workingday' 'weather' 'temp' 'atemp' 'humidity'\n",
-      " 'windspeed']\n",
+      "['year' 'dayofyear' 'hour' 'season' 'holiday' 'workingday' 'weather' 'temp'\n",
+      " 'atemp' 'humidity' 'windspeed']\n",
       "\n",
       "First 5 examples: \n",
-      "[[  1.      0.      0.      1.      9.84   14.395  81.      0.   ]\n",
-      " [  1.      0.      0.      1.      9.02   13.635  80.      0.   ]\n",
-      " [  1.      0.      0.      1.      9.02   13.635  80.      0.   ]\n",
-      " [  1.      0.      0.      1.      9.84   14.395  75.      0.   ]\n",
-      " [  1.      0.      0.      1.      9.84   14.395  75.      0.   ]]\n",
-      "All train data: (10886, 8)\n",
-      "Train data: (9500, 8)\n",
-      "Dev data: (1386, 8)\n",
-      "Test data: (6493, 8)\n"
+      "[[  2.01100000e+03   1.00000000e+00   0.00000000e+00   1.00000000e+00\n",
+      "    0.00000000e+00   0.00000000e+00   1.00000000e+00   9.84000000e+00\n",
+      "    1.43950000e+01   8.10000000e+01   0.00000000e+00]\n",
+      " [  2.01100000e+03   1.00000000e+00   1.00000000e+00   1.00000000e+00\n",
+      "    0.00000000e+00   0.00000000e+00   1.00000000e+00   9.02000000e+00\n",
+      "    1.36350000e+01   8.00000000e+01   0.00000000e+00]\n",
+      " [  2.01100000e+03   1.00000000e+00   2.00000000e+00   1.00000000e+00\n",
+      "    0.00000000e+00   0.00000000e+00   1.00000000e+00   9.02000000e+00\n",
+      "    1.36350000e+01   8.00000000e+01   0.00000000e+00]\n",
+      " [  2.01100000e+03   1.00000000e+00   3.00000000e+00   1.00000000e+00\n",
+      "    0.00000000e+00   0.00000000e+00   1.00000000e+00   9.84000000e+00\n",
+      "    1.43950000e+01   7.50000000e+01   0.00000000e+00]\n",
+      " [  2.01100000e+03   1.00000000e+00   4.00000000e+00   1.00000000e+00\n",
+      "    0.00000000e+00   0.00000000e+00   1.00000000e+00   9.84000000e+00\n",
+      "    1.43950000e+01   7.50000000e+01   0.00000000e+00]]\n",
+      "All train data: (10886, 11)\n",
+      "Train data: (9500, 11)\n",
+      "Dev data: (1386, 11)\n",
+      "Test data: (6493, 11)\n"
      ]
     }
    ],
    "source": [
     "# Load train data\n",
     "train_path = '~/datasets/bike/train.csv' # path on local machine\n",
-    "df_train = pd.read_csv(train_path)\n",
-    "# Extract datetime feature\n",
-    "all_train_dates = pd.to_datetime(df_train[\"datetime\"])\n",
+    "df_train = pd.read_csv(train_path, parse_dates=[0])\n",
+    "# Split datetime up into 3 components (year, dayofyear, hour)\n",
+    "df_train.insert(1, \"year\", df_train[\"datetime\"].dt.year)\n",
+    "df_train.insert(2, \"dayofyear\", df_train[\"datetime\"].dt.dayofyear)\n",
+    "df_train.insert(3, \"hour\", df_train[\"datetime\"].dt.hour)\n",
     "# Get feature names (excluding datetime, casual, registered, count)\n",
-    "feature_names_train = df_train.columns.values[1:-3]\n",
     "print (\"Feature names: \")\n",
-    "print (feature_names_train)\n",
+    "print (df_train.columns.values[1:-3])\n",
     "# Extract numerical features\n",
-    "num_data = df_train.iloc[:,1:].values\n",
+    "num_data = df_train.iloc[:, 1:].values\n",
     "X, Y = num_data[:, :-3], num_data[:, -1]\n",
     "# Print out first 5 training examples\n",
     "print (\"\\nFirst 5 examples: \")\n",
@@ -79,17 +90,19 @@
     "\n",
     "# Load and process test data (repeat above)\n",
     "test_path = '~/datasets/bike/test.csv' # path on local machine\n",
-    "df_test = pd.read_csv(test_path)\n",
-    "test_dates = pd.to_datetime(df_test[\"datetime\"])\n",
+    "df_test = pd.read_csv(test_path, parse_dates=[0])\n",
+    "df_test.insert(1, \"year\", df_test[\"datetime\"].dt.year)\n",
+    "df_test.insert(2, \"dayofyear\", df_test[\"datetime\"].dt.dayofyear)\n",
+    "df_test.insert(3, \"hour\", df_test[\"datetime\"].dt.hour)\n",
     "feature_names_test = df_test.columns.values[1:]\n",
-    "test_data = df_test.iloc[:,1:].values\n",
+    "test_data = df_test.iloc[:, 1:].values\n",
     "\n",
     "# Split all training data into train set and dev set (about 7:1 ratio)\n",
     "shuffle = np.random.permutation(np.arange(X.shape[0]))\n",
-    "X, Y, all_train_dates = X[shuffle], Y[shuffle], all_train_dates[shuffle]\n",
+    "X, Y = X[shuffle], Y[shuffle]\n",
     "print (\"All train data: {}\".format(X.shape))\n",
-    "train_data, train_labels, train_dates = X[:9500], Y[:9500], all_train_dates[:9500]\n",
-    "dev_data, dev_labels, dev_dates = X[9500:], Y[9500:], all_train_dates[9500:]\n",
+    "train_data, train_labels = X[:9500], Y[:9500]\n",
+    "dev_data, dev_labels = X[9500:], Y[9500:]\n",
     "\n",
     "# Array sizes\n",
     "print (\"Train data: {}\".format(train_data.shape))\n",
@@ -100,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -126,9 +139,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSLE(baseline): 1.5629246036\n",
-      "RMSLE: 1.39378752988\n",
-      "R-square on dev: 0.280842519381\n"
+      "RMSLE(baseline): 1.52309106369\n",
+      "RMSLE: 1.27241681542\n",
+      "R-square on dev: 0.37209391508\n"
      ]
     }
    ],
