Added Ridge and Lasso regressions

--- a/project_bikesharing.ipynb
+++ b/project_bikesharing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,11 @@
     "# SK-learn libraries for learning.\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.linear_model import Lasso\n",
+    "\n",
     "from sklearn.grid_search import GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -146,6 +150,7 @@
     }
    ],
    "source": [
+    "# Linear Regression\n",
     "# Fit a simple regression model using all training data\n",
     "lr_model = LinearRegression()\n",
     "lr_model.fit(train_data, train_labels)\n",
@@ -156,6 +161,69 @@
     "print (\"RMSLE(baseline): {}\".format(RMSLE(dev_labels, base_preds)))\n",
     "\n",
     "# Now try linear regression model\n",
+    "# Predictions cannot be negative, convert negative predictions to zero\n",
+    "preds[preds<0] = 0\n",
+    "print (\"RMSLE: {}\".format(RMSLE(dev_labels, preds)))\n",
+    "\n",
+    "# R2 for dev set\n",
+    "print (\"R-square on dev: {}\".format(metrics.r2_score(dev_labels, preds)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE: 1.26044812959\n",
+      "R-square on dev: 0.347722009279\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Linear Regression with L2 Regularization\n",
+    "# Fit ridge regression model\n",
+    "lr_ridge_model = Ridge(alpha=2400)\n",
+    "lr_ridge_model.fit(train_data, train_labels)\n",
+    "preds = lr_ridge_model.predict(dev_data)\n",
+    "\n",
+    "# Predictions cannot be negative, convert negative predictions to zero\n",
+    "preds[preds<0] = 0\n",
+    "print (\"RMSLE: {}\".format(RMSLE(dev_labels, preds)))\n",
+    "\n",
+    "# R2 for dev set\n",
+    "print (\"R-square on dev: {}\".format(metrics.r2_score(dev_labels, preds)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE: 1.25750980355\n",
+      "R-square on dev: 0.353691196355\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Linear Regression with L1 Regularization\n",
+    "# Fit lasso regression model\n",
+    "lr_lasso_model = Lasso(alpha=8)\n",
+    "lr_lasso_model.fit(train_data, train_labels)\n",
+    "preds = lr_lasso_model.predict(dev_data)\n",
+    "\n",
     "# Predictions cannot be negative, convert negative predictions to zero\n",
     "preds[preds<0] = 0\n",
     "print (\"RMSLE: {}\".format(RMSLE(dev_labels, preds)))\n",
