Tuned Adaboost. Added gradient boost.

--- a/project_bikesharing.ipynb
+++ b/project_bikesharing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -23,6 +23,7 @@
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.ensemble import AdaBoostRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.svm import SVR\n",
     "\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -521,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -530,9 +531,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSLE: 0.787777073209\n",
-      "R-square on dev: 0.569290213077\n",
-      "[ 0.161  0.048  0.681  0.     0.     0.01   0.     0.041  0.059  0.     0.   ]\n"
+      "RMSLE: 0.314907966266\n",
+      "R-square on dev: 0.950630350674\n",
+      "[ 0.094  0.093  0.488  0.003  0.007  0.09   0.029  0.05   0.066  0.062\n",
+      "  0.018]\n"
      ]
     }
    ],
@@ -542,7 +544,7 @@
     "np.random.seed(0)\n",
     "\n",
     "# Fit Adaboost with decision tree regressor\n",
-    "ada_model = AdaBoostRegressor(n_estimators=5)\n",
+    "ada_model = AdaBoostRegressor(base_estimator=DecisionTreeRegressor(max_depth=20), n_estimators=30, loss=\"linear\")\n",
     "ada_model.fit(train_data_scaled, train_labels)\n",
     "ada_preds = ada_model.predict(dev_data_scaled)\n",
     "\n",
@@ -592,7 +594,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSLE: 0.318029615747\n",
+      "R-square on dev: 0.951649235839\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Gradient Boosting with Decision Tree Regressor\n",
+    "# Ensure consistency of results\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "# Fit Adaboost with decision tree regressor\n",
+    "gb_model = GradientBoostingRegressor(loss='lad', max_depth=9, n_estimators=125)\n",
+    "gb_model.fit(train_data_scaled, train_labels)\n",
+    "gb_preds = gb_model.predict(dev_data_scaled)\n",
+    "\n",
+    "# Predictions cannot be negative, convert negative predictions to zero\n",
+    "gb_preds[gb_preds<0] = 0\n",
+    "\n",
+    "# RMSLE\n",
+    "print (\"RMSLE: {}\".format(RMSLE(dev_labels, gb_preds)))\n",
+    "\n",
+    "# R2 for dev set\n",
+    "print (\"R-square on dev: {}\".format(metrics.r2_score(dev_labels, gb_preds)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -604,9 +642,9 @@
     "X_scaled = scaler.fit_transform(X)\n",
     "test_data_scaled = scaler.transform(test_data)\n",
     "\n",
-    "# Predict using Random Forest (0.49 on Kaggle)\n",
-    "rf_model.fit(X_scaled, Y)\n",
-    "kaggle_preds = rf_model.predict(test_data_scaled)\n",
+    "# Predict using Adaboost (RF: 0.49, ADA: 0.48)\n",
+    "ada_model.fit(X_scaled, Y)\n",
+    "kaggle_preds = ada_model.predict(test_data_scaled)\n",
     "\n",
     "# Write to csv\n",
     "out_path = '/Users/InfernoIX/datasets/bike/kaggle_submission.csv'\n",
